fix header
overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ ol, ul {
 blockquote, q {
 	quotes: none;
 }
+blockquote:before, blockquote:after,
 q:before, q:after {
 	content: '';
 	content: none;
@@ -49,7 +50,9 @@ body {
   font-family: sans-serif;
   font-size: 10px;
   box-sizing: border-box;
- 
+width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 
 }
 h1{
@@ -71,21 +74,26 @@ nav {
     width: 405px;
 	background-color: black;
 	position: fixed;
+	
+	
 }
 .restaurant-list {
 	width: 420px;
 	background-color: white;
+	padding-top: 40px;
 
 }
 .location{
   border-bottom: thin solid gray;
   padding: 4%;
   background-color: white;
+  
 }
 .content{
   display: inline;
   width: 90%;
   float: left;
+
 }
 .arrow{
 	display: inline;
@@ -94,10 +102,9 @@ nav {
 .arrow-left{
 }
 section{
-	width: 420px;
-	
 }
 
 .location:hover{
 	background-color: aquamarine;
 }
+
